# apiary

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  demo-fake-claude.sh  demo-wrapper.sh  demo.tape  design.md  swarm-demo-orchestrator.sh  swarm-demo.tape
.claude/skills/vhs-demo/: SKILL.md
assets/: demo.webm  swarm-demo.webm
docs/: index.html
src/: config.rs  hooks.rs  lib.rs  main.rs  notify.rs  project.rs
src/pod/: detector.rs  discovery.rs  mod.rs
src/store/: mod.rs
src/tmux/: mod.rs
src/tui/: app.rs  handler.rs  ui.rs
tests/: agent_teams_discovery.rs  tmux_capture_roundtrip.rs
tests/scripts/: test_agent_teams_interactive.sh  test_agent_teams_panes.sh  test_agent_teams_v2.sh  test_agent_teams_v3.sh  test_agent_teams_v4.sh  test_agent_teams_v5.sh
